# uab-zantiks-analysis

./: .gitignore  .lintr  README.md  analyze.R  analyze.py  annotations_test.py  camera_params.py  data_utils.py  explore_arenas.py  find_mapping.py  heatmap.py  ideas.md  make_heatmap.py  map_to_genotype.R  plan.md  pyproject.toml  sleep.py  uab_common.py
configs/jip3_test/: developmental_delay.toml  light_dark_preference.toml  ymaze_15.toml  ymaze_4.toml
configs/jip3_test/3wpf/: light_dark_preference.toml  light_dark_preference_3wpf.toml  mirror_biting.toml  social_preference.toml  ymaze_4.toml
configs/jip3_test/6dpf/: light_dark_preference.toml  light_dark_preference_6dpf.toml  light_dark_transition.toml  sleep.toml  startle_response.toml  startle_response_prepulse_inhibition.toml  ymaze_15.toml
configs/other/: r578c_6dpf.toml
configs/slc_ab/uab_321/: 6dpf.toml
configs/slc_ab/uab_341/: 6dpf.toml
configs/test/: mt_zantiks.toml
configs/wildtype/: light_dark_preference_3wpf.toml  light_dark_preference_6dpf.toml  light_dark_transition.toml  mirror_biting.toml  sleep.toml  social_preference.toml  startle_response.toml  ymaze_15.toml  ymaze_4.toml
extras/: count_output_genotypes.R
templates/: config.toml  genotypes.csv
templates/fish_used/: eight_1.txt  eight_2.txt  empty.txt  four_1.txt  four_2.txt  four_3.txt  four_4.txt  microtracker.txt  twelve_1.txt  twelve_2.txt  twelve_3.txt  twelve_4.txt  zantiks_left.txt  zantiks_right.txt
